# local-knlowdge-base

./: .env.example  .gitignore  README_linux.md  README_mac.md  README_win.md  pyproject.toml  start.ps1
api/: config.py  main.py
api/routers/: chat.py  health.py  index.py  search.py
api/services/: context_builder.py  llm.py  retriever.py
cli/: main.py
cli/commands/: chat.py  index.py  query.py  search.py  serve.py  status.py
indexer/: chunker.py  embedder.py  file_tracker.py  models.py  pipeline.py
scripts/: install.ps1
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatWindow.tsx  IndexStatus.tsx  IndexingOverlay.tsx  MessageBubble.tsx  QueryInput.tsx  SettingsPanel.tsx  SourceCard.tsx
web/src/hooks/: useChat.ts  useIndexStatus.ts  useSettings.ts  useTheme.ts
