[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag"
version = "0.1.0"
description = "Local RAG knowledge base powered by Ollama"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6.0",
    "ollama>=0.2.0",
    "markdown-it-py>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "pyarrow>=15.0.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
rag = "cli.main:app"

[tool.setuptools.packages.find]
include = ["indexer*", "vectordb*", "api*", "cli*"]
